--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 
 #main textarea {
 	width: calc(100% - 20px);
-	height: calc(100% - 100px);
+	height: 300px;
 	border: 1px solid grey;
 	padding: 10px;
 	margin: 0 auto;
