--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ body {
 	padding: 20px;
 }
 
+#editor {
+	max-width: 400px;
+	margin: 0 auto;
+}
+
 #editor_header_box {
 	display: flex;
 	flex-wrap: wrap;
@@ -44,7 +49,7 @@ body {
 	outline: none;
 }
 
-#main textarea {
+#editor textarea {
 	width: calc(100% - 20px);
 	height: 300px;
 	border: 1px solid grey;
@@ -56,9 +61,11 @@ body {
 	font-family: Consolas, Monaco;
 }
 
-#editor {
-	max-width: 400px;
-	margin: 0 auto;
+#editor textarea.file_hovered {
+	color: #c1c1c1;
+	border-color: #8a5bf5;
+	box-shadow: 0 0 10px #8a5bf5;
+	transition: all 0.3s;
 }
 
 #editor_footer {
