Use grabbing cursor while dragging canvas
Use 'cursor: grab' on :hover and 'cursor: grabbing' when :active (when the user drags the mouse in the canvas)

--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ textarea#code {
     box-shadow: 0px 5px 8px 1px rgba(0, 0, 0, .3);
 }
 
+#logo-canvas:active {
+    cursor: grabbing;
+}
+
 .copyright-footer {
     grid-area: footer;
     color: white;
